# ParallelRayTracing

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  Math.cpp  Math.h  Output.cpp  Output.h  README.md  RayTracer.cpp
include/: AccelerationStructure.h  Camera.h  Object.h  Output.h  RayTracer.h  Resources.h  Scene.h  Sphere.h  TriMesh.h  Triangle.h  accelerator.h  bvh.h
mesh_files/: banana.dae  cow.geo  cow2.geo  cow3.geo  cow4.geo  cow5.geo  generate_cows.py  teapot.dae
src/: Camera.cpp  Compute.cpp  Main.cpp  Output.cpp  Scene.cpp  accelerator.cpp  bvh.cpp
src/cuda/: CudaCommon.h  CudaObject.h  CudaRT.cu  CudaRT.h  CudaRTIter.cu  CudaRTIter.h  CudaSphere.cu  CudaSphere.h  CudaTriangle.cu  CudaTriangle.h  Main.cpp  Makefile  helper_math.h
src/mpi/: Main.cpp  RayTracer.cpp
src/openmp/: Main.cpp  RayTracer.cpp
src/serial/: Main.cpp  RayTracer.cpp
